--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header {
     height: 70vh;
     min-height: 500px;
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-                url('https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?w=1600') center/cover;
+                url(/assets/Images/backgroudImage/f90e7bb5ff2950597c1f7f1fce40bd5b03a3d836.jpg) center/cover;
     display: flex;
     flex-direction: column;
     align-items: center;
